# codescope

./: README.md  setup.cfg
codescope/: __main__.py  code_content_extractor.py  code_structure_extractor.py  config.py  core.py  file_tree_generator.py  utilities.py
codescope/analyzers/: code_structure.py  file_content.py  hierarchy.py  readme.py
generate_project_summary/: __main__.py  code_structure_extractor.py  codebase_analyzer.py  config.py  file_tree_generator.py
