[metadata]
name = codescope
version = 0.1.0
description = A tool to generate a summary of a Python project.
author = Thomas Hirtz
author_email = thomashirtz@pm.me
license = Apache License 2.0
license_file = LICENSE

[options]
install_requires =
    black
    clipboard
    flake8
    isort
    mypy
    pytest
packages = find:

[options.entry_points]
console_scripts =
    cs = codescope.__main__:main
    codescope = codescope.__main__:main
